DevOCL/src/objects/Visit_Information__c.object
<CustomObject>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Visit Information</relationshipLabel>
        <relationshipName>Visit_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onsite Worker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visit_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <label>Visit Information</label>
    <nameField>
        <label>Visit Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>